# vine-floriday-adapter

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  floridayvine-crontab  makefile  mongodb-docker-compose.yml  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  package.yml
deployment/: .env.example  README.md  floridayvine-crontab  floridayvine-docker-compose.yml  verify_installation.sh
docs/: cli_documentation.md  software_architecture.md
docs/floriday/: authentication.md  rate_limiting.md
mock-server/: setup.sh  swagger.json
mongo/: .env.default  .env.example
op-env/: README.md
op-env/test/: test.sh
scripts/: floriday-credentials  floriday_credentials.py  generate_cli_docs.py  load_credentials.sh  load_floriday_credentials.py  op-env  unset_floriday_credentials.py  verify_credentials.sh  verify_env_vars.py  verify_floriday_auth.sh
src/floridayvine/: __main__.py  config.py  floriday.py  minio.py  persistence.py
tests/: manual_testing_plan.md  test_about.py  test_can_run_script.py  test_config.py  test_entities.py  test_floriday.py  test_floriday_auth_and_client.py  test_misc.py  test_persistence.py  test_sync.py  test_sync_customer_offers.py  test_sync_supply_lines.py  test_upload_files_to_vine.py
tests/data/: quotation_2024-08-19_1.json  quotation_2024-08-19_2.json  (+1 more)
work/: backlog.md  definition-of-done.md  dod-compliance-actions.md  doing.md  floriday_demo.md  migration_guide.md
(+12 files in other folders)
